# market_map

./: .env.example  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs  merchants.rs
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: app.html
frontend/src/lib/: api.ts
frontend/src/lib/components/: Map.svelte  MarketDetail.svelte
frontend/src/routes/: +page.svelte  app.css
frontend/static/: robots.txt  sitemap.xml
